{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "4abd1430-25ea-49f0-b4aa-9f9a8dbb827f",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "88560461-87b1-4a5c-b71b-d6ee38c70c00",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Action",
                    "type": "Button",
                    "id": "10b2b18e-f8b1-4300-8ca1-2bf837857655",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SkipDay",
                    "type": "Button",
                    "id": "4d62d897-560e-4827-8923-818b9089ec90",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchMode",
                    "type": "Button",
                    "id": "6386b98b-1a63-4e11-8353-022bb5bb6cb7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchSeeds",
                    "type": "Button",
                    "id": "09ef2ad2-cea2-44de-bb10-e79dc2900280",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "4ce64188-3127-4bb9-9d83-371fdacc0a3a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "54318bd1-be5d-4bf7-9904-d49854441de5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4d7df1c7-3a81-474f-ab74-14ae708c02bb",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c4872953-215b-4eb3-a900-6e2b19cefd01",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "76a9226d-7041-4c86-b4f4-825e2083fcb1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b081cba8-95dc-4d49-8fa0-9f539cc0f385",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52e7b868-74eb-45f4-b97c-9c64258cefa6",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkipDay",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dbe1cce2-46e9-44b3-9022-cb7dd37c5403",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5fb39d5-0ab9-4fee-9f2a-5b5127e9861f",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchSeeds",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}